<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="enBN_IDM_error" Id="{104435cf-fd68-424e-b50f-3e7cee5dd54a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE enBN_IDM_error :
(
	no_error,
	header_missmatch,
	no_power,
	head_failure
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>